<project xmlns="http://maven.apache.org/POM/4.0.0" 
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>vscode-liquid-java-server</groupId>
  <artifactId>vscode-liquid-java-server</artifactId>
  <version>0.0.1-SNAPSHOT</version>
     <build>
        <plugins>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.16.0</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<compilerSource>20</compilerSource>
					<compilerCompliance>20</compilerCompliance>
					<compilerTargetPlatform>20</compilerTargetPlatform>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${pVersion.compiler}</version>
                <configuration>
					<source>20</source>
					<target>20</target>
				</configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.7.1</version>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>language-server-liquidjava</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>App</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    
    <properties>
        <lsp4j.version>0.24.0</lsp4j.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>20</maven.compiler.source>
		<maven.compiler.target>20</maven.compiler.target>
		<!-- versions -->
		<version.memcompiler>1.3.0</version.memcompiler>
		<version.spoon>10.4.2</version.spoon>
		<version.z3>4.8.17</version.z3>
		<version.liquidjava>1.0</version.liquidjava>
		<!-- plugin versions -->
		<pVersion.compiler>3.8.0</pVersion.compiler>
		<pVersion.surefire>3.1.2</pVersion.surefire>
    </properties>
    
    <repositories>
		<repository>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>maven-central</id>
			<name>Maven Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>aqua-tools-repo</id>
			<name>Aqua Tools Repository</name>
			<url>https://raw.githubusercontent.com/sosy-lab/java-smt/maven-repo/</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>aqua-tools</id>
			<name>Aqua Tools Repository</name>
			<url>https://aqua.group/tools/maven/</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
    
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.36</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.14.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<!-- <dependency>
			<groupId>liquidjava</groupId>
			<artifactId>verifier</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/liquidjava-verifier.jar</systemPath>
		</dependency> -->
		<dependency>
			<groupId>io.github.liquid-java</groupId>
			<artifactId>liquidjava-verifier</artifactId>
			<version>0.0.2</version>
		</dependency>
		<dependency>
			<groupId>tools.aqua</groupId>
			<artifactId>z3-turnkey</artifactId>
			<version>${version.z3}</version>
		</dependency>
		<dependency>
			<groupId>org.mdkt.compiler</groupId>
			<artifactId>InMemoryJavaCompiler</artifactId>
			<version>${version.memcompiler}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.inria.gforge.spoon/spoon-core -->
		<dependency>
			<groupId>fr.inria.gforge.spoon</groupId>
			<artifactId>spoon-core</artifactId>
			<version>${version.spoon}</version>
		</dependency> 
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>
		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4 -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.7.1</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.7.1</version>
		</dependency>

	</dependencies>
    
  <name>language-server-liquidjava</name>
</project>